# pomodoro-timer

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: audio.py  controls.py  gui_tk.py  notifier.py  pomodoro_timer.py  server.py  timer.py
src/static/: index.html
tests/: conftest.py  test_countdown.py  test_run_pomodoro_flow.py
